--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "scripts": {
     "build": "npm run build -w midnight-lib && npm run build -w midnight-app && npm run build -w midnight-mcp",
-    "dev": "npm run dev -w midnight-app"
+    "dev": "npm run dev -w midnight-app",
+    "mcp-inspector": "npx @modelcontextprotocol/inspector npx -y tsx packages/midnight-mcp/src/server.ts"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
